RESOLVED FIXED144909
[EGL][X11] XPixmap created in GLContextEGL::createPixmapContext() is leaked
https://bugs.webkit.org/show_bug.cgi?id=144909
Summary [EGL][X11] XPixmap created in GLContextEGL::createPixmapContext() is leaked
Carlos Garcia Campos
Reported 2015-05-12 06:19:29 PDT
The pixmap is created and passed to eglCreatePixmapSurface(), but never released. eglCreatePixmapSurface() doesn't take the ownership of the pixmap, so we should explicitly free it when the GLContextEGL is destroyed.
Attachments
Patch (5.99 KB, patch)
2015-05-12 06:23 PDT, Carlos Garcia Campos
svillar: review+
Carlos Garcia Campos
Comment 1 2015-05-12 06:23:24 PDT
Sergio Villar Senin
Comment 2 2015-05-12 06:30:33 PDT
Comment on attachment 252959 [details] Patch Makes total sense to me.
Zan Dobersek
Comment 3 2015-05-12 12:50:52 PDT
Comment on attachment 252959 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=252959&action=review > Source/WebCore/platform/graphics/egl/GLContextEGL.cpp:66 > + static EGLint attributeList[] = { This is a bit unusual, since in the project we don't normally modify static data (apart from initialization steps). > Source/WebCore/platform/graphics/egl/GLContextEGL.cpp:220 > +GLContextEGL::GLContextEGL(EGLContext context, EGLSurface surface, XUniquePixmap&& pixmap) This constructor should be guarded with PLATFORM(X11). > Source/WebCore/platform/graphics/egl/GLContextEGL.h:42 > + GLContextEGL(EGLContext, EGLSurface, XUniquePixmap&&); Ditto for the PLATFORM(X11) guards.
Carlos Garcia Campos
Comment 4 2015-05-12 23:16:25 PDT
(In reply to comment #3) > Comment on attachment 252959 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=252959&action=review > > > Source/WebCore/platform/graphics/egl/GLContextEGL.cpp:66 > > + static EGLint attributeList[] = { > > This is a bit unusual, since in the project we don't normally modify static > data (apart from initialization steps). Ok, it's also a bit unrelated to this patch anyway. > > Source/WebCore/platform/graphics/egl/GLContextEGL.cpp:220 > > +GLContextEGL::GLContextEGL(EGLContext context, EGLSurface surface, XUniquePixmap&& pixmap) > > This constructor should be guarded with PLATFORM(X11). Right! > > Source/WebCore/platform/graphics/egl/GLContextEGL.h:42 > > + GLContextEGL(EGLContext, EGLSurface, XUniquePixmap&&); > > Ditto for the PLATFORM(X11) guards. Sure.
Carlos Garcia Campos
Comment 5 2015-05-12 23:19:56 PDT
Note You need to log in before you can comment on or make changes to this bug.