Source/WebCore/platform/graphics/egl/GLContextEGL.h
@@ -23,8 +23,11 @@
 #if USE(EGL)
 
 #include "GLContext.h"
-
 #include <EGL/egl.h>
+
+#if PLATFORM(X11)
+#include "XUniqueResource.h"
+#endif
 
 namespace WebCore {
 
@@ -36,6 +39,9 @@ public:
     static std::unique_ptr<GLContextEGL> createWindowContext(EGLNativeWindowType, GLContext* sharingContext);
 
     GLContextEGL(EGLContext, EGLSurface, EGLSurfaceType);
+#if PLATFORM(X11)
+    GLContextEGL(EGLContext, EGLSurface, XUniquePixmap&&);
+#endif
     virtual ~GLContextEGL();
     virtual bool makeContextCurrent();
     virtual void swapBuffers();
@@ -53,7 +59,9 @@ public:
 
 private:
     static std::unique_ptr<GLContextEGL> createPbufferContext(EGLContext sharingContext);
+#if PLATFORM(X11)
     static std::unique_ptr<GLContextEGL> createPixmapContext(EGLContext sharingContext);
+#endif
 
     static void addActiveContext(GLContextEGL*);
     static void cleanupSharedEGLDisplay(void);
@@ -61,8 +69,11 @@ private:
     EGLContext m_context;
     EGLSurface m_surface;
     EGLSurfaceType m_type;
+#if PLATFORM(X11)
+    XUniquePixmap m_pixmap;
+#endif
 #if USE(CAIRO)
-    cairo_device_t* m_cairoDevice;
+    cairo_device_t* m_cairoDevice { nullptr };
 #endif
 };
 
